--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <main>
 
             <!-- Section 1 -->
-            <div id="section [0]" class="box" style="display: flex; flex-direction: row">
+            <div id="section [0]" style="display: flex; flex-direction: row">
                 <div id="subsection [0]" style="flex: 1">
                     <div>
                         <!-- Profile photo -->
@@ -103,7 +103,7 @@
             </div>
 
             <!-- Section 2 -->
-            <div id="section [1]" class="box">
+            <div id="section [1]">
                 <div id="subsection [0]" class="content active">
                     <div>
                         <div id="title [2]" class="title-gradient">Evaluare și Consiliere vocațională</div>
@@ -217,7 +217,7 @@
             </div>
         </main>
         <article>
-            <div id="section [2]" class="box">
+            <div id="section [2]">
                 <div>
                     <div id="title [2]" style="margin-bottom: 10px">Ce este consilierea vocațională?</div>
                     <div>Toți ne confruntăm cu alegeri dificile sau perioade în care ne întrebăm „Chiar mă potrivesc cu jobul meu?”. Unele persoane ajung să urmeze o profesie care nu se potrivește cu interesele sau aptitudinile lor. De multe ori, își asumă un rol care nu le reflectă cu adevărat, în timp ce direcția spre care aveau înclinații rămâne neexplorată.</div>
