--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="description" content="Psiholog acreditat CPR. Sector 3, București. Evaluare psihologică. Evaluarea profilului vocațional. Consiliere vocațională.">
-        <title>Gabriel Pădurean︱Cabinet individual de psihologie︱Sector 3, București</title>
+        <title>Pădurean Gabriel︱Cabinet individual de psihologie︱Sector 3, București</title>
         <link rel="icon" href="assets/media/logo-cabinet.png" type="image/png">
         <link rel="apple-touch-icon" href="assets/media/logo-cabinet.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -254,3 +254,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
