--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div>
                         <div id="title [2]" class="title-gradient">Evaluare și Consiliere vocațională</div>
                         <div id="title [4]">
-                            200 lei + 50 lei/ședință
+                            Pachet complet
                         </div>
                         <div id="subsection [3]">
                             <div>
@@ -116,6 +116,7 @@
                                     <img id="img [3]" src="assets/media/counter-1.svg" alt="1">
                                 </div>
                                 <div id="title [3]">Evaluarea profilului vocațional</div>
+                                <div id="title [3]" style="text-align: right">160 lei</div>
                             </div>
                             <div>
                                 Cea mai validă metodă de explorare a potențialului tău pe piața muncii.
@@ -125,6 +126,7 @@
                                     <img id="img [3]" src="assets/media/counter-2.svg" alt="2">
                                 </div>
                                 <div id="title [3]">Consilierea vocațională</div>
+                                <div id="title [3]" style="text-align: right">80 lei/ședință</div>
                             </div>
                             <div>
                                 Instrumentul prin care transformi rezultatele evaluării într-un plan concret de acțiune pentru viitorul tău profesional.
