--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <div id="section [1]" class="overlay1">
                 <div id="subsection [0]" class="content active">
                     <div>
-                        <div id="title [2]" class="title-gradient">Evaluare și Consiliere vocațională</div>
-                        <div id="title [4]">
+                        <div id="title [2]">Evaluare și Consiliere vocațională</div>
+                        <div id="title [4]" style="color: #43a663ff">
                             Pachet complet
                         </div>
                         <div id="subsection [3]">
@@ -116,7 +116,7 @@
                                     <img id="img [3]" src="assets/media/counter-1.svg" alt="1">
                                 </div>
                                 <div id="title [3]">Evaluarea profilului vocațional</div>
-                                <div id="title [3]" style="text-align: right">160 lei</div>
+                                <div id="title [3]" style="color: #43a663ff; text-align: right">160 lei</div>
                             </div>
                             <div>
                                 Cea mai validă metodă de explorare a potențialului tău pe piața muncii.
@@ -126,7 +126,7 @@
                                     <img id="img [3]" src="assets/media/counter-2.svg" alt="2">
                                 </div>
                                 <div id="title [3]">Consilierea vocațională</div>
-                                <div id="title [3]" style="text-align: right">80 lei/ședință</div>
+                                <div id="title [3]" style="color: #43a663ff; text-align: right">80 lei/ședință</div>
                             </div>
                             <div>
                                 Instrumentul prin care transformi rezultatele evaluării într-un plan concret de acțiune pentru viitorul tău profesional.
