--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
             </h10>
             <button id="button [0]" onclick="window.open('https://wa.me/40746302423')">
                 <img id="img [2]" src="assets/media/whatsapp.svg" alt="WhatsApp">
+                <h17>
+                    WhatsApp
+                </h17>
             </button>
             <button id="button [1]" onclick="window.open('https://wa.me/40746302423')">
-                <img id="img [0]" src="assets/media/whatsapp-2.svg" alt="WhatsApp">
+                <img id="img [0]" src="assets/media/whatsapp.svg" alt="WhatsApp">
             </button>
         </header>
         <main id="main [0]" class="overlay">
