--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
             </section>
         </main>
-        <main id="main [1]" class="overlay">
+        <main class="overlay">
             <div>
                 <h1>Află ce ți se potrivește</h1>
             </div>
@@ -215,7 +215,7 @@
                 </div>
             </section>
         </main>
-        <main id="main [1]" class="overlay">
+        <main class="overlay">
             <div>
                 <div>
                     <div>
@@ -232,7 +232,7 @@
                 </div>
             </div>
         </main>
-        <main id="main [0]">
+        <main>
             <section class="overlay">
                 <h2>Ce este consilierea vocațională?</h2>
                 <div>
@@ -256,12 +256,12 @@
                 </div>
             </section>
         </main>
-        <main id="main [1]" class="overlay">
+        <main class="overlay">
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2849.5905210952255!2d26.127479876375975!3d44.421047702431665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1fee7141dbf03%3A0x29aa7b1d20184525!2sStrada%20Popa%20Stoica%20din%20Farcas%2017%2C%20Bucure%C8%99ti%20031451!5e0!3m2!1sen!2sro!4v1757512168583!5m2!1sen!2sro" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
-        <main id="main [0]">
+        <main id="main [1]">
             <div>
                 <img id="img [1]" src="assets/media/logo-copsi.svg" alt="Logo COPSI">
             </div>
@@ -271,7 +271,7 @@
                 </h7>
             </div>
         </main>
-        <footer>
+        <footer id="main [1]">
             <div>
                 <div id="icon [0]" onclick="window.open('https://www.linkedin.com/in/gabrielpadurean/')">
                     <img id="img [3]" src="assets/media/linkedin-grayscale.svg" alt="LinkedIn">
@@ -286,11 +286,11 @@
                     <img id="img [8]" src="assets/media/instagram.svg" alt="Instagram">
                 </div>
             </div>
-            <string>
+            <h7>
                 ©
                 <span id="year [0]"></span>
                 Gabriel Pădurean
-            </string>
+            </h7>
         </footer>
         <script src="assets/js/main.js"></script>
     </body>
