--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
             </section>
         </main>
-        <main class="overlay">
+        <main id="main [0]" class="overlay">
             <div>
                 <h1>Află ce ți se potrivește</h1>
             </div>
@@ -215,7 +215,7 @@
                 </div>
             </section>
         </main>
-        <main class="overlay">
+        <main id="main [0]" class="overlay">
             <div>
                 <div>
                     <div>
