--- a/index.html
+++ b/index.html
@@ -266,9 +266,17 @@
                 <img id="img [1]" src="assets/media/logo-copsi.svg" alt="Logo COPSI">
             </div>
             <div>
-                <h7>
-                    Acreditat de Colegiul Psihologilor din România
-                </h7>
+                <string id="string [2]">
+                    <h7>
+                        Acreditat de Colegiul Psihologilor din România
+                    </h7>
+                </string>
+                <string id="string [3]">
+                    <h7>
+                        Acreditat de<br>
+                        Colegiul Psihologilor din România
+                    </h7>
+                </string>
             </div>
         </main>
         <footer id="main [1]">
