--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 </div>
                 <div>
                     <div>
-                        <div>
+                        <div id="section [1]">
                             <img id="img [9]" src="assets/media/counter-1.svg" alt="1">
                         </div>
                     </div>
                     <div>
-                        <div>
+                        <div id="section [1]">
                             <h6>
                                 Evaluarea profilului vocațional
                             </h6>
@@ -75,12 +75,12 @@
                 </div>
                 <div>
                     <div>
-                        <div>
+                        <div id="section [1]">
                             <img id="img [9]" src="assets/media/counter-2.svg" alt="2">
                         </div>
                     </div>
                     <div>
-                        <div>
+                        <div id="section [1]">
                             <h6>
                                 Consiliere vocațională
                             </h6>
@@ -111,12 +111,12 @@
                     <h5>200 lei</h5>
                 </div>
                 <div>
-                    <div>
+                    <div id="section [1]">
                         <div>
                             <img id="img [9]" src="assets/media/check.svg">
                         </div>
                     </div>
-                    <div>
+                    <div id="section [1]">
                         <h8>Evaluarea intereselor ocupaționale.</h8>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <h8>Evaluarea abilității mentale generale (inteligenței).</h8>
                     </div>
                 </div>
-                <div>
+                <div id="section [1]">
                     <h9>
                         La final, vei primi un raport complet de evaluare privind profilul tău vocațional și direcțiile de carieră care ți se potrivesc.
                     </h9>
@@ -169,12 +169,12 @@
                     <h5>100 lei/ședință</h5>
                 </div>
                 <div>
-                    <div>
+                    <div id="section [1]">
                         <div>
                             <img id="img [9]" src="assets/media/check.svg">
                         </div>
                     </div>
-                    <div>
+                    <div id="section [1]">
                         <h8>Explorarea valorilor personale.</h8>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                         <h8>Elaborarea unui plan de acțiune personalizat.</h8>
                     </div>
                 </div>
-                <div>
+                <div id="section [1]">
                     <h9>
                         Împreună vom stabili obiectivele și pașii necesari pentru a obține ce îți dorești cu adevărat de la profesia ta.
                     </h9>
