--- a/index.html
+++ b/index.html
@@ -208,6 +208,16 @@
                         <h8>Elaborarea unui plan de acțiune personalizat.</h8>
                     </div>
                 </div>
+                <div>
+                    <div>
+                        <div>
+                            <img id="img [9]" src="assets/media/check.svg">
+                        </div>
+                    </div>
+                    <div>
+                        <h8>Redactarea și optimizarea CV-ului.</h8>
+                    </div>
+                </div>
                 <div id="section [1]">
                     <h9>
                         Împreună vom stabili obiectivele și pașii necesari pentru a obține ce îți dorești cu adevărat de la profesia ta.
@@ -303,3 +313,4 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
