--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <img id="img [0]" src="assets/media/whatsapp.svg" alt="WhatsApp">
             </button>
         </header>
-        <main id="main [0]" class="overlay">
-            <div>
+        <main id="main [0]">
+            <div class="overlay">
                 <h1>Obține ce îți dorești de la cariera ta</h1>
             </div>
-            <section id="section [0]">
+            <section id="section [0]" class="overlay">
                 <div>
                     <h3>Evaluare și Consiliere vocațională</h3>
                 </div>
@@ -99,11 +99,11 @@
                 </div>
             </section>
         </main>
-        <main id="main [0]" class="overlay">
-            <div>
+        <main id="main [0]">
+            <div class="overlay">
                 <h1>Află ce ți se potrivește</h1>
             </div>
-            <section id="section [0]">
+            <section id="section [0]" class="overlay">
                 <div>
                     <h3>Evaluarea profilului vocațional</h3>
                 </div>
@@ -157,11 +157,11 @@
                 </div>
             </section>
         </main>
-        <main id="main [0]" class="overlay">
-            <div>
+        <main id="main [0]">
+            <div class="overlay">
                 <h1>Găsește cele mai bune soluții</h1>
             </div>
-            <section id="section [0]">
+            <section id="section [0]" class="overlay">
                 <div>
                     <h3>Consiliere vocațională</h3>
                 </div>
@@ -225,8 +225,8 @@
                 </div>
             </section>
         </main>
-        <main id="main [0]" class="overlay">
-            <div>
+        <main id="main [0]">
+            <div class="overlay">
                 <div>
                     <div>
                         <img id="img [10]" src="assets/media/gabriel-padurean-profile.jpg" alt="Profil">
@@ -266,8 +266,8 @@
                 </div>
             </section>
         </main>
-        <main class="overlay">
-            <div>
+        <main>
+            <div class="overlay">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2849.5905210952255!2d26.127479876375975!3d44.421047702431665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1fee7141dbf03%3A0x29aa7b1d20184525!2sStrada%20Popa%20Stoica%20din%20Farcas%2017%2C%20Bucure%C8%99ti%20031451!5e0!3m2!1sen!2sro!4v1757512168583!5m2!1sen!2sro" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
@@ -313,4 +313,3 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
-
